# Tikon

./: .gitignore  .travis.yml  Buscador_subclases.py  COSO.py  CULTIVO  Controles.py  Coso.py  Ejemplo red_en.py  GIS.py  INCERT.py  LICENCE.md  MANIFEST.in  NuevaParcela.py  NuevoCOSO.py  NuevoCoso.py  NuevoPaisaje.py  PAISAJE.py  PARCELA  PARCELA.py  PLAGAS_v2  README.md  README.rst  SIG.py  SIMUL.py  SUELO.py  Test.py  Test_DSSAT.py  __init__.py  environment.yml  errores.txt  instalar.py  pyproject.toml  readthedocs.yml  reqs.txt  requísitos.txt  setup.py
Bayesiano/: CALIB.py  Prueba PyMC.py
CLIMA/: CLIMA.py  Estad_diario.py  Estad_futuro.py  Estadísticas.py  Manejo.py
CULTIVO/: CLIMA.py  CROPGRO_CUL.txt  CROPGRO_ECO.txt  CULTIVO.py  Controles.py  DSSAT.py  METEO.py  Modelos_pl.csv  NuevoCultivo.py  SUELO.py  VARIEDAD.py  Variables_suelos.xlsx  Variables_variedades.csv  files.txt  ~$Variables_suelos.xlsx
Clima/: CLIMA.py
Cultivo/: CULTIVO.py  Controles.py  NuevoCultivo.py
Descargas_extensiones/: pymc-2.3.4-cp34-none-win32.whl
INCERT/: CALIB.py  DATOS.py  Distribuciones.py  Ecuaciones.py  INCERT.py  NuevaCALIB.py  NuevoINCERT.py  Prueba PyMC.py
Interfaz/: Números.py
Licencia/: LICENCE.txt  LICENÇA.md  лицензия.md  許諾書.md
MATEMÁTICAS/: Distribuciones.py  Ecuaciones.py  Experimentos.py  INCERT.py  NuevaCalib.py  NuevoIncert.py  __init__.py
Matemáticas/: Arte.py  Distribuciones.py  Ecuaciones.py  Experimentos.py  INCERT.py  NuevaCalib.py  NuevoIncert.py  Prueba PyMC.py  Pruebas.py  Unidades.py
Módulos/: pymc-2.3.6-cp35-none-win32.whl
PLAGAS/: INSECTOS.py  PLAGAS.py  PLAGAS_v2.py  REDES.py
Proyectos/: Ejemplo redes.py  MatplotLib.py  Oarenosella.csv  Prueba O arenosella.py  Prueba RAE.py  Prueba_incert.py
RAE/: ENFERMEDADES.py  Ecuaciones.py  Ejemplo redes.py  Enfermedades.py  INSECTOS.py  NuevaRED.py  NuevaRedAE.py  NuevoINSECTO.py  NuevoInsecto.py  ORGANISMO.py  Organismo.py  PLANTA.py  Planta.py  REDES.py  RedAE.py  __init__.py
REDES/: ENFERMEDADES.py  Ecuaciones.py  Ejemplos redes.py  INSECTOS.py  NuevaRED.py  NuevoINSECTO.py  NuevoINSECTOS.py  ORGANISMO.py  PLAGAS_v1.py  PLANTA.py  Prueba RAE  REDES.py  __init__.py
Resultados_DSSAT/: DSSAT46.INH  DSSAT46.INP  DSSBatch.v45  ET.OUT  INFO.OUT  LUN.LST  Mulch.OUT  OVERVIEW.OUT  Pest.OUT  PlantGro.OUT  PlantN.OUT  RunList.OUT  SoilNi.OUT  SoilNiBal.OUT  SoilNoBal.OUT  SoilOrg.OUT  SoilTemp.OUT  SoilWat.OUT  SoilWatBal.OUT  SolNBalSum.OUT  WARNING.OUT  Weather.OUT
docs/: Makefile  act_trads.py  make.bat  preinstal.py  zanata.xml
pruebas/: .coveragerc  Oarenosella_B.csv  Tomates.py  a_prioris.py  prb.py  test_base.py
tikon/: Buscador_subclases.py  Controles.py  Coso.py  PAISAJE.py  (+24 more)
(+1888 files in other folders)
