[tool.poetry]
name = "tikon"
version = "3.0.0"
description = "Modelos de redes agroecológicas"
authors = ["Julien Jean Malard-Adam <julien.malard@mail.mcgill.ca>"]
license = "AGPL-v3.0"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
SALib = "^1.4.5"
spotpy = "^1.5.14"
taqdir = "^2.1.3"
Shapely = "^1.8.1"
ennikkai = "^1.2.5"
xarray = "^2022.3.0"
pyproj = "^3.3.0"
geopy = "^2.2.0"
PCSE = "^5.5.0"
tradssat = "^0.1.7"
pyshp = "^2.2.0"
Pillow = "^9.0.1"
Babel = "^2.9.1"
seaborn = "^0.11.2"
openpyxl = "^3.0.10"
xlrd = "1.2.0"
bibtexparser = "^1.2.0"
frozendict = "^2.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
