[tool.poetry]
name = "tikon"
version = "3.0.0"
description = "Modelos de redes agroecológicas"
authors = ["Julien Jean Malard-Adam <julien.malard@mail.mcgill.ca>"]
license = "AGPL-v3.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.2"
scipy = "^1.9.1"
pandas = "^1.4.4"
matplotlib = "^3.5.1"
SALib = "^1.4.5"
spotpy = "^1.6.1"
taqdir = "^2.1.3"
Shapely = "^1.8.1"
ennikkai = "^1.2.5"
xarray = "^2022.3.0"
pyproj = "^3.3.0"
geopy = "^2.2.0"
PCSE = "^5.5.0"
tradssat = "^0.1.7"
pyshp = "^2.2.0"
Pillow = "^9.0.1"
Babel = "^2.9.1"
seaborn = "^0.12.0"
openpyxl = "^3.0.10"
xlrd = "1.2.0"
bibtexparser = "^1.2.0"
frozendict = "^2.3.4"

[tool.poetry.group.dev.dependencies]
mypy = {git = "https://github.com/python/mypy.git"}
data-science-types = "^0.2.23"
pyright = "^1.1.270"
black = "^22.8.0"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
follow_imports = "silent"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
